      For SSHd startup failures provide different messages on Windows
      and non-Windows machines. (Fixes: #235).
      FIXME: add detection code to report SSH daemon startup failures.
    - Add new cmdline option --hide-foldersharing. If used, all GUI
      elements related to exporting client-side folders to X2Go sessions
      get hidden. (Fixes: #514).
  * debian/control:
    + Add dbg:package x2goplugin-dbg.

  [ Clemens Lang ]
  * New upstream version (4.0.2.1):
    - Re-add Info.plist file (which got removed by accident in commit 91cf6c6).
      (Fixes: #502).

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.2.1):
    - Hide GSSAPI options on direct RDP connections. (Fixes: #478).
    - Search X-Server in /Applications/Utilities/XQuartz.app on Mac.
    - Wrong cmd line option throw error dialog if running not from terminal.
    - Add command line option "close-disconnect", which make client close after
      session is disconnected.
    - Don't start pulse on Windows, until we really have to start a session
      that requires pulse support.
    - Check if sound is activated before starting pulse. 
    - Fix starting sshd on Win XP. (Fixes: #421).
    - Fix running x2goclient without arguments on Windows. (Fixes: #522).
    - Save proxy output in $HOME/S-$SESSION-ID/session.log if debugging is
      enabled.
    - Fork x2goclient on windows and terminate child processes if x2go client
      crashed. (Fixes: #159).

  [ Mike DePaulo ]
  * New upstream release (4.0.2.1):
    - Windows: Enable PulseAudio log when --debug is passed.
    - Windows: Fix compatibility with current PulseAudio master branch
    - Windows: Reduce size of NSIS installer by switching to lzma solid compression
    - Windows: cygwin packages (inluding patched OpenSSH 6.6.1p1-3) updated from
      latest versions as of 2014-04-08 to latest versions as of 2014-06-09. This
      includes openssl 1.0.1h-1, which fixes the 6 CVEs announced on 2014-06-05.